--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css"/>
-    <title>Nescafe | Beans</title>
+    <link rel="icon" href="images/nescafe-small-logo.svg">
+    <title>Nescafé | Beans</title>
 </head>
 <body>
     <header>
-        <h1>Nescafe cares about coffe beans</h1>
+        <h1>Nescafé cares about coffe beans</h1>
         <div id="header-img">
         </div>
         <h2>It all starts with the perfect bean</h2>
@@ -19,7 +20,8 @@
             propagation methods and valorize local coffee varieties. Through our research we 
             even rediscovered the first coffee varieties ever cultivated by mankind and 
             revived them in our Nespresso special editions.</p>
-        <p>Under the global <a href="https://www.nestle.com/stories/international-coffee-day-nescafe-launched-grown-respectfully" target="_blank">Nescafé Plan</a>, Nestlé will have supported farmers across the world 
+        <p>Under the global <a href="https://www.nestle.com/stories/international-coffee-day-nescafe-launched-grown-respectfully" target="_blank">Nescafé Plan</a>, 
+            Nestlé will have supported farmers across the world 
             with 220 million new coffee plantlets by the end of 2020. This allows them to renovate 
             plantations, improve crop quality and productivity, and – on the most vital,
             human level – make coffee farming profitable.</p>
@@ -28,11 +30,11 @@
         <blockquote cite="/">
             Lewis Blacks aid: “I like coffee because it gives me the illusion that I might be awake."
         </blockquote>
-        <p>With these aims in mind, we've obtained the first generation of hybrid Arabica <img id="intext" src="/images/coffee-plant.jpg" alt="">
+        <p>With these aims in mind, we've obtained the first generation of hybrid Arabica <img id="intext" src="/images/coffee-plant.jpg" alt="coffee plants">
             trees able to be propagated by seeds. These exclusive varieties are adaptable across a wide range of environments 
             and have a shorter breeding period. They produce coffees of an outstanding quality, with a 40% 
             higher yield, and demand less water – a crucial trait in rain-scarce regions – and fertilizer. 
-            We are harnessing this brestkthrough to develop new coffee varieties for Nespresso and our 
+            We are harnessing this breakthrough  to develop new coffee varieties for Nespresso and our 
             out-of-home coffee business Nestlé Professional. We are also innovating at the post-harvest stage, 
             to create special flavors and aromas through a more controlled fermentation of beans, a natural 
             process during coffee production.</p>
@@ -69,15 +71,15 @@
                     which uses proprietary technology that combines centrifugal force and 
                     infusion to deliver a longer cup of coffee.</p>
                 <p>Following the infusion phase, the machine spins the capsule at up to 7,000 rpm, 
-                    faster than a propeller-driven plane's engine, to intensify the waterflow 
+                    faster than a propeller-driven plane's engine, to intensify the water flow 
                     through the coffee grounds, extract all the flavor and create a smooth and 
                     stable crema.</p>
                 <p>In record time, we've brought the Starbucks experience into the home too, 
-                    developing the<a href="https://www.nestle.com/media/pressreleases/allpressreleases/global-launch-new-starbucks-products" target="_black"> 
+                    developing the<a href="https://www.nestle.com/media/pressreleases/allpressreleases/global-launch-new-starbucks-products" target="_blank"> 
                     <i>first Starbucks capsules for Nespresso, and Nescafé Dolce Gusto</i></a>, plus roast and 
                     ground and whole bean coffees. <a href="https://www.nestle.com/stories/innovation-starbucks-premium-instant-coffee" 
-                    target="_black">Premium soluble coffees</a> followed, and most recently, a 
-                    <a href="https://www.nestle.com/media/news/nestle-starbucks-at-home-coffee-us" target="_black"><i>Starbucks Cold Brew concentrate</i></a>.</p>
+                    target="_blank">Premium soluble coffees</a> followed, and most recently, a 
+                    <a href="https://www.nestle.com/media/news/nestle-starbucks-at-home-coffee-us" target="_blank"><i>Starbucks Cold Brew concentrate</i></a>.</p>
             </div>
         </div>
         <div class="slider">
@@ -99,10 +101,10 @@
         <div class="social">
             <h2>Stay connected:</h2>
             <div class="social-links">
-                <a href="/">Instagram</a>
-                <a href="/">Twitter</a>
-                <a href="/">YouTube</a>
-                <a href="/">Facebook</a>
+                <a href="https://www.instagram.com/nescafe/" target=”_blank”>Instagram</a>
+                <a href="https://twitter.com/nescafe" target=”_blank”>Twitter</a>
+                <a href="https://www.youtube.com/user/nescafe" target=”_blank”>YouTube</a>
+                <a href="https://www.facebook.com/Nescafe.Ukraine/?brand_redir=203900255471" target=”_blank”>Facebook</a>
             </div>
         </div>
         <div class="contact">
