--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Nescafé cares about coffe beans</h1>
-        <div id="header-img">
+        <div id="header-img" aria-label="coffee with hearth">
         </div>
         <h2>It all starts with the perfect bean</h2>
         <p>With coffee production under threat from climate change and disease, 
@@ -40,7 +40,7 @@
             process during coffee production.</p>
         <div class="columns">
             <div class="col">
-                <div id="col-1"></div>
+                <div id="col-1" title="roasted beans from white to black"></div>
                 <h2>The art of roasting</h2>
                 <p>Roasting is an art, but also a science. And with increasing 
                     interest in specialty coffee, our perfection of the process allows 
@@ -60,7 +60,7 @@
                     simplifies the art of roasting and makes it more accessible.</p>
             </div>
             <div class="col">
-                <div id="col-2"></div>
+                <div id="col-2" title="brewed coffee and beans around"></div>
                 <h2>Brewing the perfect cup from perfect beans</h2>
                 <p>By optimizing the brewing process for soluble coffee in the factory, we're 
                     able to preserve the perfect coffee aroma, using a combination of 
@@ -84,11 +84,11 @@
         </div>
         <div class="slider">
             <div class="slides">
-                <div id="slide-1"></div>
-                <div id="slide-2"></div>
-                <div id="slide-3"></div>
-                <div id="slide-4"></div>
-                <div id="slide-5"></div>
+                <div id="slide-1" title="coffee field on the hills"></div>
+                <div id="slide-2" title="dark coffee beans"></div>
+                <div id="slide-3" title="roasting machine"></div>
+                <div id="slide-4" title="coffee capsules with beans around"></div>
+                <div id="slide-5" title="woman drinks coffee"></div>
             </div>
             <a href="#slide-1"></a>
             <a href="#slide-2"></a>
