--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <blockquote cite="/">
             Lewis Blacks aid: “I like coffee because it gives me the illusion that I might be awake."
         </blockquote>
-        <p>With these aims in mind, we've obtained the first generation of hybrid Arabica <img id="intext" src="/images/coffee-plant.jpg" alt="coffee plants">
+        <p>With these aims in mind, we've obtained the first generation of hybrid Arabica <img id="intext" src="images/coffee-plant.jpg" alt="coffee plants">
             trees able to be propagated by seeds. These exclusive varieties are adaptable across a wide range of environments 
             and have a shorter breeding period. They produce coffees of an outstanding quality, with a 40% 
             higher yield, and demand less water – a crucial trait in rain-scarce regions – and fertilizer. 
