--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
             </div>
         </div>
         <div class="contact">
-            <a href="https://zbys1av.github.io/nescafe-and-beans/">Cookies</a>
-            <a href="https://zbys1av.github.io/nescafe-and-beans/">Privacy Policy</a>
-            <a href="https://zbys1av.github.io/nescafe-and-beans/">Contact Us</a>
+            <a href="https://www.nescafe.com/cookies">Cookies</a>
+            <a href="https://www.nescafe.com/privacy-policy">Privacy Policy</a>
+            <a href="https://www.nestle.com/info/contactus/contactus">Contact Us</a>
         </div>
         <p id="copyright">Copyright 2021 Nescafe</p>
     </footer>
